--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "dotenv": "^4.0.0",
     "firebase": "^4.8.2",
+    "jsonwebtoken": "^8.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
