--- a/package.json
+++ b/package.json
@@ -17,10 +17,24 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
+  "devDependencies": {
+    "autoprefixer": "^7.1.4",
+    "concat": "^1.0.3",
+    "node-sass": "^4.5.3",
+    "npm-run-all": "^4.1.1",
+    "postcss-cli": "^4.1.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel watch:sass reactstart",
+    "reactstart": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch:sass": "node-sass public/sass/main.scss public/css/style.css -w",
+    "devserver": "live-server",
+    "compile:sass": "node-sass public/sass/main.scss public/css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   }
 }
