--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "postcss-cli": "^4.1.1"
   },
   "scripts": {
-    "start": "npm-run-all --parallel watch:sass reactstart",
+    "start": "npm-run-all --parallel watch:sass reactstart compile:sass",
     "reactstart": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "watch:sass": "node-sass public/sass/main.scss public/css/style.css -w",
+    "watch:sass": "node-sass public/sass/main.scss public/css/style.css",
     "devserver": "live-server",
     "compile:sass": "node-sass public/sass/main.scss public/css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
