--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "base-64": "^0.1.0",
     "bootstrap": "^4.0.0-beta.3",
     "dotenv": "^4.0.0",
     "firebase": "^4.8.2",
@@ -18,7 +19,8 @@
     "react-scripts": "1.0.17",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "xendit-js-node": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
