--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^4.8.2",
     "jsonwebtoken": "^8.1.0",
     "md5": "^2.2.1",
+    "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
