--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-FIREBASE_API_KEY=AIzaSyD384SUrkibh_5ht78CLR_Fttc7k945sO8
-FIREBASE_AUTH_DOMAIN=kanban-irianto.firebaseapp.com
-FIREBASE_DATABASE_URL=https://kanban-irianto.firebaseio.com
-FIREBASE_PROJECT_ID=kanban-irianto
-FIREBASE_STORAGE_BUCKET=kanban-irianto.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=231233131978
+REACT_APP_FIREBASE_API_KEY=AIzaSyDjiWTez3r_lZreCZUvIUhaSj8-rIWfhgw
+REACT_APP_FIREBASE_AUTH_DOMAIN=boxaladin-auction.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://boxaladin-auction.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=boxaladin-auction
+REACT_APP_FIREBASE_STORAGE_BUCKET=boxaladin-auction.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
+REACT_APP_API_HOST=http://localhost:3000
