--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest-cli": "^22.4.2",
     "jest-enzyme": "^4.2.0",
     "node-sass": "^4.5.3",
+    "node-sass-chokidar": "^1.1.0",
     "npm-run-all": "^4.1.1",
     "postcss-cli": "^4.1.1",
     "react-test-renderer": "^16.2.0",
