--- a/.env.local
+++ b/.env.local
@@ -4,4 +4,5 @@ REACT_APP_FIREBASE_DATABASE_URL=https://boxaladin-auction.firebaseio.com
 REACT_APP_FIREBASE_PROJECT_ID=boxaladin-auction
 REACT_APP_FIREBASE_STORAGE_BUCKET=boxaladin-auction.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
-REACT_APP_API_HOST=http://baexpress-test.ap-southeast-1.elasticbeanstalk.com
+REACT_APP_API_HOST=http://localhost:3000
+# REACT_APP_API_HOST=http://baexpress-test.ap-southeast-1.elasticbeanstalk.com
