Move all folder from public to src including sass, css, js and font

--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "test": "jest",
     "eject": "react-scripts eject",
     "sass": "npm-run-all -s sass:compile prefix:css sass:apply-prefix",
-    "sass:compile": "node-sass-chokidar public/sass/main.scss > public/css/style.css",
-    "sass:apply-prefix": "node-sass-chokidar public/css/style.prefix.css > public/css/style.css",
-    "watch:sass-prefix": "npm run sass && chokidar public/sass/*.scss public/sass/**/*.scss -c 'npm run sass'",
-    "watch:sass": "npm run sass:compile && node-sass public/sass/main.scss public/css/style.css -w",
+    "sass:compile": "node-sass-chokidar src/style/sass/main.scss > src/style/css/style.css",
+    "sass:apply-prefix": "node-sass-chokidar src/style/css/style.prefix.css > src/style/css/style.css",
+    "watch:sass-prefix": "npm run sass && chokidar src/style/sass/*.scss src/style/sass/**/*.scss -c 'npm run sass'",
+    "watch:sass": "npm run sass:compile && node-sass src/style/sass/main.scss src/style/css/style.css -w",
     "devserver": "live-server",
-    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' public/css/style.css -o public/css/style.prefix.css",
-    "compress:css": "node-sass-chokidar public/css/style.prefix.css > public/css/style.css --output-style compressed",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' src/style/css/style.css -o src/style/css/style.prefix.css",
+    "compress:css": "node-sass-chokidar src/style/css/style.prefix.css > src/style/css/style.css --output-style compressed",
     "build:css": "npm-run-all -s sass:compile prefix:css compress:css"
   },
   "jest": {
