--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-    "env": {
+  "env": {
     "test": {
       "presets": ["env", "react"],
       "plugins": ["transform-export-extensions"],
@@ -7,6 +7,17 @@
         "./**/*.js",
         "node_modules/jest-runtime"
       ]
-    }
+    },
+    "development": {
+      "plugins": [
+        "transform-class-properties",
+      ],
+      "presets": [
+        "env",
+        "es2015",
+        "react",
+        "stage-2"
+      ]
+    },
   }
 }
