--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "postcss-cli": "^4.1.1",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
-    "redux-test-utils": "^0.2.2"
+    "redux-test-utils": "^0.2.2",
+    "flow-bin": "^0.63.1",
+    "flow-typed": "^2.2.3"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:sass reactstart",
