--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
   "devDependencies": {
     "autoprefixer": "^7.1.4",
     "babel-jest": "^22.4.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "^22.4.1",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "chokidar-cli": "^1.2.0",
     "concat": "^1.0.3",
@@ -44,7 +49,8 @@
     "redux-mock-store": "^1.5.1",
     "redux-test-utils": "^0.2.2",
     "flow-bin": "^0.63.1",
-    "flow-typed": "^2.2.3"
+    "flow-typed": "^2.2.3",
+    "eslint-plugin-flowtype": "^2.46.1"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:sass reactstart",
