--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,7 @@
     },
     "development": {
       "plugins": [
-        "transform-class-properties",
+        "transform-class-properties"
       ],
       "presets": [
         "env",
@@ -18,6 +18,6 @@
         "react",
         "stage-2"
       ]
-    },
+    }
   }
 }
