--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.4",
-    "babel-jest": "^22.4.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.1.1",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-preset-flow": "^6.23.0",
     "chokidar-cli": "^1.2.0",
     "concat": "^1.0.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-redux": "^0.1.8",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "flow-bin": "^0.63.1",
+    "flow-typed": "^2.2.3",
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
     "jest-enzyme": "^4.2.0",
@@ -46,10 +51,7 @@
     "postcss-cli": "^4.1.1",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
-    "redux-test-utils": "^0.2.2",
-    "flow-bin": "^0.63.1",
-    "flow-typed": "^2.2.3",
-    "eslint-plugin-flowtype": "^2.46.1"
+    "redux-test-utils": "^0.2.2"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:sass reactstart",
