--- a/.flowconfig
+++ b/.flowconfig
@@ -17,6 +17,8 @@ esproposal.class_instance_fields=enable
 
 module.system=haste
 module.name_mapper='^.+\.css$' -> 'CSSModuleStub'
+module.name_mapper='.*\(.css\)' -> 'CSSModule'
+module.file_ext=.css
 
 suppress_type=$FlowIssue
 suppress_comment=\\(.\\|\n\\)*\\$FlowIssue
