--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-preset-flow": "^6.23.0",
+    "babel-register": "^6.26.0",
     "chokidar-cli": "^1.2.0",
     "concat": "^1.0.3",
     "enzyme": "^3.3.0",
