--- a/.babelrc
+++ b/.babelrc
@@ -19,7 +19,9 @@
         "react",
         "stage-2"
       ]
+    },
+    "production": {
+      "plugins": ["transform-remove-console"]
     }
   }
 }
-
