--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-plugin-transform-remove-console": "^6.9.1",
     "base-64": "^0.1.0",
     "bootstrap": "^4.0.0-beta.3",
     "dotenv": "^4.0.0",
