--- a/.ebextensions/non-https.config
+++ b/.ebextensions/non-https.config
@@ -24,7 +24,7 @@
 ###################################################################################################
 
 files:
-   "/tmp/https-redirect":
+   "/tmp/non-https":
      owner: root
      group: root
      mode: "000644"
@@ -52,16 +52,6 @@ files:
            access_log    /var/log/nginx/access.log;
 
            location / {
-               set $redirect 0;
-               if ($http_x_forwarded_proto != "https") {
-                 set $redirect 1;
-               }
-               if ($http_user_agent ~* "ELB-HealthChecker") {
-                 set $redirect 0;
-               }
-               if ($redirect = 1) {
-                 return 301 https://$host$request_uri;
-               }
 
                proxy_pass            http://docker;
                proxy_http_version    1.1;
@@ -76,5 +66,5 @@ files:
 
 container_commands:
   remove_https_redirect:
-    command: "mv /tmp/https-redirect /etc/nginx/sites-available/elasticbeanstalk-nginx-docker-proxy.conf"
-    test: '[ "${ENV}" == "prod" ]'
+    command: "mv /tmp/non-https /etc/nginx/sites-available/elasticbeanstalk-nginx-docker-proxy.conf"
+    test: '[ "${ENV}" != "prod" ]'
