add headers validation for every axios

--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,4 @@ REACT_APP_API_HOST= https://api.boxaladin.com
 #REACT_APP_API_HOST= http://localhost:3000
 
 REACT_APP_GAME_PASSWORD=highestbidder08boxaladin
+REACT_APP_KEY=kolorijo
