--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "md5": "^2.2.1",
     "moment": "^2.21.0",
     "react": "^16.2.0",
+    "react-art": "^16.3.2",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
+    "react-native-web": "^0.6.1",
+    "react-otp": "0.0.1",
     "react-redux": "^5.0.6",
     "react-redux-loading-bar": "^3.1.2",
     "react-router": "^4.2.0",
