--- a/.env.local
+++ b/.env.local
@@ -5,8 +5,8 @@ REACT_APP_FIREBASE_PROJECT_ID=boxaladin-auction
 REACT_APP_FIREBASE_STORAGE_BUCKET=boxaladin-auction.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
 #REACT_APP_API_HOST= https://api.boxaladin.com
-REACT_APP_API_HOST=https://test-express.boxaladin.com
-#REACT_APP_API_HOST= http://localhost:3000
+#REACT_APP_API_HOST=https://test-express.boxaladin.com
+REACT_APP_API_HOST= http://localhost:3000
 
 REACT_APP_GAME_PASSWORD=highestbidder08boxaladin
 REACT_APP_KEY=kolorijo
