--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ public/css/style.comp.css
 style.comp.css
 public/css/style.css
 style.css
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
