--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^5.0.6",
     "react-redux-loading-bar": "^3.1.2",
     "react-router": "^4.2.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "reactstrap": "^5.0.0-alpha.4",
