--- a/.env.local
+++ b/.env.local
@@ -7,6 +7,9 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
 #REACT_APP_API_HOST= https://api.boxaladin.com
 REACT_APP_API_HOST=https://test-express.boxaladin.com
 #REACT_APP_API_HOST= http://localhost:3000
+REACT_APP_FIREBASE_PRODUCT=productsdummy
+#REACT_APP_FIREBASE_PRODUCT=products
+
 PORT=5000
 
 REACT_APP_GAME_PASSWORD=highestbidder08boxaladin
