Adding config file for the serve package

--- a/.ebextensions/https-redirect.config
+++ b/.ebextensions/https-redirect.config
@@ -78,3 +78,5 @@ container_commands:
   remove_https_redirect:
     command: "mv /tmp/https-redirect /etc/nginx/sites-available/elasticbeanstalk-nginx-docker-proxy.conf"
     test: '[ "${ENV}" == "prod" ]'
+  move_serve_file:
+    command: "sudo cp serve.json ./build"
