put url invoice to env

--- a/.env.local
+++ b/.env.local
@@ -9,6 +9,8 @@ REACT_APP_API_HOST=https://test-express.boxaladin.com
 #REACT_APP_API_HOST= http://localhost:3000
 REACT_APP_FIREBASE_PRODUCT=productsdummy
 #REACT_APP_FIREBASE_PRODUCT=products
+REACT_APP_WEB_PRODUCTION=https://www.boxaladin.com
+REACT_APP_WEB_DEVELOPMENT=http://localhost:5000
 
 PORT=5000
 
