--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,6 @@
+#ENV=prod
+ENV=dev
+#ENV=test
 REACT_APP_FIREBASE_API_KEY=AIzaSyDjiWTez3r_lZreCZUvIUhaSj8-rIWfhgw
 REACT_APP_FIREBASE_AUTH_DOMAIN=boxaladin-auction.firebaseapp.com
 REACT_APP_FIREBASE_DATABASE_URL=https://boxaladin-auction.firebaseio.com
@@ -11,6 +14,7 @@ REACT_APP_FIREBASE_PRODUCT=productsdummy
 #REACT_APP_FIREBASE_PRODUCT=products
 REACT_APP_WEB_PRODUCTION=https://www.boxaladin.com
 REACT_APP_WEB_DEVELOPMENT=http://localhost:5000
+REACT_APP_WEB_TEST=http://ba-web-test.ap-southeast-1.elasticbeanstalk.com
 
 PORT=5000
 
