--- a/.env.local
+++ b/.env.local
@@ -1,17 +1,20 @@
-#ENV=prod
-ENV=dev
-#ENV=test
+#REACT_APP_ENV=prod
+#REACT_APP_ENV=dev
+REACT_APP_ENV=test
+
+
 REACT_APP_FIREBASE_API_KEY=AIzaSyDjiWTez3r_lZreCZUvIUhaSj8-rIWfhgw
 REACT_APP_FIREBASE_AUTH_DOMAIN=boxaladin-auction.firebaseapp.com
 REACT_APP_FIREBASE_DATABASE_URL=https://boxaladin-auction.firebaseio.com
 REACT_APP_FIREBASE_PROJECT_ID=boxaladin-auction
 REACT_APP_FIREBASE_STORAGE_BUCKET=boxaladin-auction.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
-#REACT_APP_API_HOST= https://api.boxaladin.com
-REACT_APP_API_HOST=https://test-express.boxaladin.com
-#REACT_APP_API_HOST= http://localhost:3000
-REACT_APP_FIREBASE_PRODUCT=productsdummy
-#REACT_APP_FIREBASE_PRODUCT=products
+REACT_APP_API_HOST_PRODUCTION= https://api.boxaladin.com
+REACT_APP_API_HOST_TEST=https://test-express.boxaladin.com
+REACT_APP_API_HOST_DEVELOPMENT= http://localhost:3000
+REACT_APP_FIREBASE_PRODUCT_DEVELOPMENT=productsdummy
+REACT_APP_FIREBASE_PRODUCT_TEST=productsdummy
+REACT_APP_FIREBASE_PRODUCT_PRODUCTION=products
 REACT_APP_WEB_PRODUCTION=https://www.boxaladin.com
 REACT_APP_WEB_DEVELOPMENT=http://localhost:5000
 REACT_APP_WEB_TEST=http://ba-web-test.ap-southeast-1.elasticbeanstalk.com
