get userinfo wallet

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 #REACT_APP_ENV=prod
-#REACT_APP_ENV=dev
-REACT_APP_ENV=test
+REACT_APP_ENV=dev
+#REACT_APP_ENV=test
 
 
 REACT_APP_FIREBASE_API_KEY=AIzaSyDjiWTez3r_lZreCZUvIUhaSj8-rIWfhgw
