mobile design header

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-otp": "0.0.1",
     "react-redux": "^5.0.6",
     "react-redux-loading-bar": "^3.1.2",
+    "react-responsive": "^5.0.0",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
@@ -59,6 +60,9 @@
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
     "redux-test-utils": "^0.2.2"
+  },
+  "optionalDependencies": {
+    "fsevents": "1.1.2"
   },
   "scripts": {
     "start": "npm-run-all --parallel watch:sass reactstart",
