New flow for pulsa: pulsa now grouped by price
Changing tab titles in Invoices screen
Adding Youtube playlist to homecontent
Remove checks for verified email

--- a/.env.local
+++ b/.env.local
@@ -12,8 +12,11 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
 REACT_APP_API_HOST_PRODUCTION= https://api.boxaladin.com
 REACT_APP_API_HOST_TEST=https://test-express.boxaladin.com
 REACT_APP_API_HOST_DEVELOPMENT= http://localhost:3000
+REACT_APP_FIREBASE_PRICE_DEVELOPMENT=pricedummy
 REACT_APP_FIREBASE_PRODUCT_DEVELOPMENT=productsdummy
+REACT_APP_FIREBASE_PRICE_TEST=pricedummy
 REACT_APP_FIREBASE_PRODUCT_TEST=productsdummy
+REACT_APP_FIREBASE_PRICE_PRODUCTION=prices
 REACT_APP_FIREBASE_PRODUCT_PRODUCTION=products
 REACT_APP_WEB_PRODUCTION=https://www.boxaladin.com
 REACT_APP_WEB_DEVELOPMENT=http://localhost:5000
