--- a/.env.local
+++ b/.env.local
@@ -10,7 +10,7 @@ REACT_APP_FIREBASE_PROJECT_ID=boxaladin-auction
 REACT_APP_FIREBASE_STORAGE_BUCKET=boxaladin-auction.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
 REACT_APP_API_HOST_PRODUCTION= https://api.boxaladin.com
-REACT_APP_API_HOST_TEST=https://test-express.boxaladin.com
+REACT_APP_API_HOST_TEST=http://13.210.222.204:3000
 REACT_APP_API_HOST_DEVELOPMENT= http://localhost:3000
 REACT_APP_FIREBASE_PRICE_DEVELOPMENT=pricedummy
 REACT_APP_FIREBASE_PRODUCT_DEVELOPMENT=productsdummy
@@ -20,7 +20,7 @@ REACT_APP_FIREBASE_PRICE_PRODUCTION=prices
 REACT_APP_FIREBASE_PRODUCT_PRODUCTION=products
 REACT_APP_WEB_PRODUCTION=https://www.boxaladin.com
 REACT_APP_WEB_DEVELOPMENT=http://localhost:5000
-REACT_APP_WEB_TEST=http://ba-web-test.ap-southeast-1.elasticbeanstalk.com
+REACT_APP_WEB_TEST=http://13.210.222.204:5000
 
 PORT=5000
 
