--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-slick": "^0.23.1",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "slick-carousel": "^1.8.1",
     "xendit-js-node": "^0.1.0"
   },
   "devDependencies": {
