--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.17.1",
     "babel-plugin-transform-remove-console": "^6.9.1",
     "base-64": "^0.1.0",
@@ -12,10 +13,12 @@
     "jsonwebtoken": "^8.1.0",
     "md5": "^2.2.1",
     "moment": "^2.21.0",
-    "react": "^16.2.0",
+    "react": "^16.5.2",
     "react-art": "^16.3.2",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
+    "react-native-off-canvas-menu": "^0.1.32",
+    "react-native-vector-icons": "^6.0.2",
     "react-native-web": "^0.6.1",
     "react-otp": "0.0.1",
     "react-redux": "^5.0.6",
@@ -25,6 +28,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-svg-buttons": "^0.4.0",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
