handle buy all wallet + hotfix bug bidding 2 user can join using 1 account

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ public/css/style.comp.css
 style.comp.css
 public/css/style.css
 style.css
+.prettierrc
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
