--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "node-sass-chokidar": "^1.1.0",
     "npm-run-all": "^4.1.1",
     "postcss-cli": "^4.1.1",
+    "prettier": "^1.14.3",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
     "redux-test-utils": "^0.2.2"
