--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-style.prefix.css
+#style.prefix.css
 # dependencies
 /node_modules
 package-lock.json
@@ -22,10 +22,10 @@ yarn-debug.log*
 yarn-error.log*
 
 
-public/css/style.comp.css
-style.comp.css
-public/css/style.css
-style.css
+#public/css/style.comp.css
+#style.comp.css
+#public/css/style.css
+#style.css
 .prettierrc
 
 # Elastic Beanstalk Files
