--- a/.env.local
+++ b/.env.local
@@ -9,7 +9,7 @@ REACT_APP_FIREBASE_DATABASE_URL=https://boxaladin-auction.firebaseio.com
 REACT_APP_FIREBASE_PROJECT_ID=boxaladin-auction
 REACT_APP_FIREBASE_STORAGE_BUCKET=boxaladin-auction.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
-REACT_APP_API_HOST_PRODUCTION=http://54.169.130.154:3000
+REACT_APP_API_HOST_PRODUCTION=https://api.boxaladin.asia
 REACT_APP_API_HOST_TEST=http://13.210.222.204:3000
 REACT_APP_API_HOST_DEVELOPMENT= http://localhost:3000
 REACT_APP_FIREBASE_PRICE_DEVELOPMENT=pricedummy
