--- a/.env.local
+++ b/.env.local
@@ -9,7 +9,7 @@ REACT_APP_FIREBASE_DATABASE_URL=https://boxaladin-auction.firebaseio.com
 REACT_APP_FIREBASE_PROJECT_ID=boxaladin-auction
 REACT_APP_FIREBASE_STORAGE_BUCKET=boxaladin-auction.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=912503242137
-REACT_APP_API_HOST_PRODUCTION=https://api.boxaladin.com
+REACT_APP_API_HOST_PRODUCTION=https://api.boxaladin.asia
 REACT_APP_API_HOST_TEST=http://13.210.222.204:3000
 REACT_APP_API_HOST_DEVELOPMENT= http://localhost:3000
 REACT_APP_FIREBASE_PRICE_DEVELOPMENT=pricedummy
@@ -18,7 +18,7 @@ REACT_APP_FIREBASE_PRICE_TEST=pricedummy
 REACT_APP_FIREBASE_PRODUCT_TEST=productsdummy
 REACT_APP_FIREBASE_PRICE_PRODUCTION=prices
 REACT_APP_FIREBASE_PRODUCT_PRODUCTION=products
-REACT_APP_WEB_PRODUCTION=https://www.boxaladin.com
+REACT_APP_WEB_PRODUCTION=http://www.boxaladin.com
 REACT_APP_WEB_DEVELOPMENT=http://localhost:5000
 REACT_APP_WEB_TEST=http://13.210.222.204:5000
 
